--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Portfolio</title>
         <meta charset="utf-8"/>
         <meta  name="viewpooint" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="assets/css/p.css" />
+        <link rel="stylesheet" href=".assets/css/p.css" />
     </head>
 <body>
     <header>
