--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <div id="main" class="h1">
             <h1>Hello, I'm Nigel</h1>
-            <a><img src="assets/images/IMG_3650.jpeg" class="profile"></a>
+            <a><img src="assets/images/IMG_3650.jpeg" class="profile" alt="Nigel-Watkins"></a>
         </div>
        <div class="p">
             <p>Frontend Web Developing Student</p>
@@ -44,35 +44,35 @@
                 <li>
                 <div>
                     <a href="https://nigeldwatkins.github.io/Refract-CSS/"> 
-                    <img src="assets/images/refract.png" class="flex-item special-item"></a>
+                    <img src="assets/images/refract.png" class="flex-item special-item" alt="First Assignment"></a>
                     <p>Refracted Assignment</p>
                 </div>
                 </li>
                 <li>
                 <div>
                     <a>This Spot Is Available</a>
-                    <img src="assets/images/loading.png.webp" class="flex-item">
+                    <img src="assets/images/loading.png.webp" class="flex-item" alt="Loading-image">
                     <p> Nothing is here, check back in later</p>
                 </div>
                 </li>
                 <li>
                 <div>    
                     <a>This Spot Is Available</a>
-                    <img src="assets/images/logo-placeholder.png.webp" class="flex-item">
+                    <img src="assets/images/logo-placeholder.png.webp" class="flex-item" alt="placeholder-logo">
                     <p>Nothing is here, check back in later</p>
                 </div>
                 </li>
                 <li>
                 <div>
                     <a>This Spot Is Available</a>
-                    <img src="assets/images/plain-placeholder.png" class="flex-item">
+                    <img src="assets/images/plain-placeholder.png" class="flex-item" alt="plain-placeholder'>
                     <p>Nothing is here, check back in later</p>
                 </div>
                 </li>
                 <li>
                 <div>
                     <a>This Spot Is Available</a>
-                    <img src="assets/images/LQIP.png.webp" class="flex-item">
+                    <img src="assets/images/LQIP.png.webp" class="flex-item" alt="LQIP">
                     <p>Nothing is here, check back in later</p>
                 </div>
                 </li>
