--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <li>
                 <div>
                     <a>This Spot Is Available</a>
-                    <img src="assets/images/plain-placeholder.png" class="flex-item" alt="plain-placeholder'>
+                    <img src="assets/images/plain-placeholder.png" class="flex-item" alt="plain-placeholder">
                     <p>Nothing is here, check back in later</p>
                 </div>
                 </li>
